--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,11 +1,28 @@
+@font-face {
+  font-family: BebasNeue;
+  src: local(Bebas Neue Regular),
+    local(BebasNeue-Regular),
+    url('/fonts/BebasNeue-Regular.woff2') format("woff2");
+}
+
+@font-face {
+  font-family: Montserrat;
+  src: local(Montserrat),
+    url('/fonts/Montserrat-VariableFont_wght.woff2') format("woff2");
+}
+
 :root {
   --aside-width: 400px;
   --cart-aside-summary-height-with-discount: 300px;
   --cart-aside-summary-height: 250px;
   --grid-item-width: 355px;
-  --header-height: 64px;
+  --header-height: 44px;
   --color-dark: #000;
   --color-light: #fff;
+}
+
+body {
+  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 img {
