--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -20,6 +20,10 @@ body {
   font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+#nav-logo svg {
+  fill: white;
+}
+
 /* 
  * Need to add `$` before numbers, 
  * it is removed along with `A` (presumably supposed to be AUD) when using 
@@ -31,9 +35,10 @@ body {
 
 /* Tokens */
 :root {
-  --color-primary: 20 20 20; /* Text, buttons, etc. */
-  --color-contrast: 250 250 249; /* Backgrounds, borders, etc. */
+  --color-primary: 42 42 42; /* Text, buttons, etc. */
+  --color-contrast: 241 241 238; /* Backgrounds, borders, etc. */
   --color-accent: 191 72 0; /* Labels like "On sale" */
+  --color-menu: 250 250 252; /* Menus, drawers, etc. */
   --font-size-fine: 0.75rem; /* text-xs */
   --font-size-copy: 1rem; /* text-base */
   --font-size-lead: 1.125rem; /* text-lg */
@@ -41,15 +46,11 @@ body {
   --font-size-display: 3rem; /* text-4xl */
   --color-shop-pay: #5a31f4;
   --shop-pay-button--width: 100%; /* Sets the width for the shop-pay-button web component */
-  --height-nav: 3rem;
+  --height-nav: 2.75rem;
   --screen-height: 100vh;
   --screen-height-dynamic: 100vh;
 
-  @media (min-width: 32em) {
-    --height-nav: 4rem;
-  }
   @media (min-width: 48em) {
-    --height-nav: 6rem;
     --font-size-heading: 2.25rem; /* text-4xl */
     --font-size-display: 3.75rem; /* text-6xl */
   }
@@ -61,13 +62,13 @@ body {
   }
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --color-primary: 250 250 250;
     --color-contrast: 32 33 36;
     --color-accent: 235 86 40;
   }
-}
+} */
 
 @keyframes fadeInAnimation {
   0% {
